fixing home image scaling on safari

--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -177,9 +177,9 @@ body {
 			border: 3px solid $dark-green;
 
 			.img {
-				width: auto ;
-				max-width: 100% ;
-				height: auto ;
+				width: 100%;
+				max-width: 100%;
+				height: auto;
 			}
 		}
 
